fixed content overflow in the wiki page

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -1066,6 +1066,7 @@ div {
                 }
             }
             .main-article {
+                word-break: break-all;
                 @media (max-width: 991px) {
                     width: 70%;
                     padding: 20px 0 20px 20px;
@@ -1116,6 +1117,7 @@ div {
                 margin-right: 20px;
                 margin-left: 20px;
                 padding-right: 30px;
+                word-break: break-all;
             }
             .directory-toolbar {
                 margin: 0 0 20px;
@@ -2995,6 +2997,7 @@ body .slick-header-column.ui-state-default {
 .view-profile .profile-section-two-fields .u-field-value {
     overflow: hidden;
     text-overflow: ellipsis;
+    word-break: break-all;
 }
 body .page-header-secondary .action-edit-team {
     &:hover {
